# audio-editor

./: .anjuta_sym_db.db  .cproject  .gitignore  .project  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  audio_player
Debug/src/.deps/: main.Po  wav_in.Po  wav_out.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  audio_about.ui  audio_fileChooser.ui  audio_player  audio_player.ui  f_err.h  f_ptch.h  main.c  main.cc  main.cc~  main.c~  open_file.c  wav_def.h  wav_def.h~  wav_in.cc  wav_in.cc~  wav_in.h  wav_in.h~  wav_out.cc  wav_out.cc~  wav_out.h  wav_out.h~
src/.deps/: main.Po  wav_in.Po  wav_out.Po
